# odoo_apps

./: .gitignore  IMPROVEMENT_PLAN.md  README.md  SPEC.md  client.py  google_class.py  models.py  pyproject.toml  requirements.txt  setup.py  test.env
.github/workflows/: python-package.yml
apps/: __init__.py  appointment.py  calendar.py  stock.py
apps/appointment/: __init__.py  appt_manager.py  objects.py
apps/calendar/: __init__.py  objects.py  scheduler.py
apps/helpers/: __init__.py  time_management.py
apps/objects/: __init__.py  appointment.py  calendar.py  stock.py
apps/stock/: __init__.py  objects.py  stock_manager.py
apps/type_hints/: __init__.py  time_zone.py
constants/: account.py
fast_odoo_bulk/: README.md  __init__.py  client.py  launcher.py  pg_read.py
handlers/: objects.py
handlers/apps/: __init__.py  calendar.py  stock.py
handlers/methods/: kitchen.py  stock.py
odoo_apps/: README.md  __init__.py  client.py  models.py  request.py  response.py
odoo_apps/account/: README.md  manager.py  objects.py
odoo_apps/appointment/: README.md  __init__.py  appt_manager.py  checkers.py  manager.py  objects.py  slots.py
odoo_apps/calendar/: README.md  objects.py  scheduler.py  type_hints.py
odoo_apps/contact/: README.md  __init__.py  book.py  docs.md  objects.py  raw_objects.py
odoo_apps/crm/: __init__.py  manager.py  objects.py
odoo_apps/helpers/: __init__.py
odoo_apps/kitchen/: README.md  gemini_idea.py
odoo_apps/mrp/: README.md  manager.py  objects.py
odoo_apps/pos/: README.md  manager.py  objects.py
odoo_apps/product/: README.md  __init__.py  data_handlers.py  manager.py  objects.py
odoo_apps/sales/: README.md  manager.py  objects.py  raw_objects.py
odoo_apps/stock/: README.md  __init__.py  manager.py  (+2 more)
raw_idea/: __init__.py  idea.py
tables_files/: odoo_tables.csv
tests/: README.md  __init__.py  conftest.py  fakes.py  project_path.py  test_account_manager_unit.py  test_appointment_manager.py  test_appointment_slots_unit.py  test_calendar_scheduler.py  test_client.py  test_client_unit.py  test_contact_unit.py  test_crm_manager_unit.py  test_invoice_manager_unit.py  test_mrp_manager_unit.py  test_pos_manager_unit.py  test_pos_order_unit.py  test_product_manager_unit.py  test_request_unit.py  test_response_unit.py  test_sales_manager_unit.py  test_stock_manager.py  test_stock_manager_unit.py  test_utils_unit.py
utils/: __init__.py  cleaning.py  help_files.py  helpers.py
(+24 files in other folders)
