[project]
name = "odoo_apps"
version = "0.3.2"
description = "A traduction of Odoos's RPC into classes."
authors = [
    {name = "Edward Toledo Lopez",email = "edward_tl@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "flask (>=3.1.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
